--- a/index.html
+++ b/index.html
@@ -1,55 +1,46 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
-  <meta http-equiv="content-type" content="text/html; charset=utf-8">
-  <title>Liu Song’s Page</title>
+  <title>Calendar</title>
+  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width">
-  <link type="text/css" charset="utf-8" rel="stylesheet" href="//lsong.org/css/stylesheet.css">
-  <link rel="stylesheet" href="index.css">
-  <script type="module" src="index.js"></script>
+  <style type="text/css">
+    #calendar {
+      margin-top: 50vh;
+      transform: translateY(-50%);
+      font-family: monospace;
+    }
+    #calendar table {
+      width: 300px;
+      margin: auto;
+      background-color: #fff;
+    }
+
+    #calendar table td {
+      border: 1px solid #aaa;
+      margin: 0px;
+      padding: 0px;
+      text-align: center;
+      height: 30px;
+    }
+
+    #calendar .today {
+      background-color: #f70;
+      color: #fff;
+    }
+  </style>
+  <script type="text/javascript" src="http://code.jquery.com/jquery.js"></script>
+  <script type="text/javascript" src="calendar.js"></script>
+  <script type="text/javascript">
+    $(function () {
+      $('#calendar').calendar();
+    });
+  </script>
 </head>
 
-<body class="container">
-  <header class="header">
-    <h1>Liu Song’s Page</h1>
-    <nav class="nav nav-bar">
-      <a href="//lsong.org">home</a>
-      <a href="//lsong.org/posts">blog</a>
-      <a href="//lsong.org/books">books</a>
-      <a href="//lsong.org/music">music</a>
-      <a href="//lsong.org/game">game</a>
-    </nav>
-    <hr />
-  </header>
-  <main class="content">
-
-    <section id="hello">
-      <h2>Hello 👋</h2>
-      <p class="headline">I am a software engineer and web developer.
-        I wrote <a href="//github.com/song940">open source</a> software and <a
-          href="https://github.com/song940?tab=repositories&q=app">apps</a>.</p>
-    </section>
-
-    <section id="app"></section>
-
-    <hr />
-    <section class="subscribe">
-      <h2>Subscribe</h2>
-      <p>Join our occasional newsletter for product launches, availability, job openings, and news:</p>
-      <form action="https://formspree.io/song940@gmail.com" method="post">
-        <input class="input" type="email" id="email" name="email" required placeholder="email address">
-        <button class="button" type="submit">Submit</button>
-      </form>
-    </section>
-  </main>
-  <footer class="footer">
-    <hr />
-    Liu Song
-    <address>
-      <a href="mailto:hi@lsong.org">hi@lsong.org</a>
-    </address>
-    <a href="https://lsong.org">https://lsong.org</a>
-  </footer>
+<body>
+  <div id="calendar"></div>
 </body>
+
 </html>
