--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     }
   </style>
   <script type="text/javascript" src="http://code.jquery.com/jquery.js"></script>
-  <script type="text/javascript" src="calendar.js"></script>
+  <script type="text/javascript" src="index.js"></script>
   <script type="text/javascript">
     $(function () {
       $('#calendar').calendar();
